# pulsar-ai-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PULSAR.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: adding-a-tool.md
pulsar/: __init__.py  __main__.py  config.py  context.py  events.py  loop.py  memory.py  permissions.py  registry.py  subagents.py
pulsar/frontends/: __init__.py  console.py  tui.py
pulsar/tools/: __init__.py  base.py  list_directory.py  read_file.py  run_shell.py  write_file.py
tests/: test_smoke.py
