# Minimal packaging metadata. Dependencies are listed in requirements.txt
# (the canonical source); they are mirrored here only so `pip install -e .`
# and the `pulsar` console entry point work.
[project]
name = "pulsar"
version = "0.1.0"
description = "Pulsar — a didactic, runnable coding agent built across Parts 1-6 of 'Anatomy of an Agentic Loop'."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "textual>=0.60",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
pulsar = "pulsar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pulsar", "pulsar.tools", "pulsar.frontends"]
